# GPT-Monologue-to-Dialogue

./: .gitignore  LICENSE  README.md  environment.yml  progress.txt  pyproject.toml  requirements.txt  setup.py
conf/: config.yaml  finetune.yaml  finetune_transformers.yaml  finetune_turngpt.yaml  inference.yaml  inference_transformers.yaml  inference_turngpt.yaml
conf/dataset/: icc.yaml
conf/env/: local.yaml
conf/experiment/: finetune_monologue_gpt.yaml  finetune_turngpt.yaml  inference_monologue_gpt.yaml  inference_turngpt.yaml
conf/hydra/: config.yaml
conf/model/: turngpt_doublehead.yaml  turngpt_lmhead.yaml
configs/finetuning/: 1.0-GPT-Finetune-TextDataset-HPC.yaml  2.0-GPT-Finetune-CustomDataset-HPC.yaml  3.0-GPT-Finetune_TextDataset-Local.yaml  4.0-GPT-Finetune-CustomDataset-Local.yaml
configs/inference/: 1.0-ConditionalProb-Inference-Local.yaml  1.0-Surprisal-Inference-Local.yaml  2.0-ConditionalProb-Inference-HPC.yaml  2.0-Suprisal-Inference-HPC.yaml
configs/inference_configs/: 2.0-Suprisal-Inference-HPC.yaml
configs/model_configs/: 4.0-GPT-Finetune-CustomDataset-Local.yaml
configs/tufts_hpc/: 1.0-GPT-Finetune-Refactored-TextDataset.sh  2.0-GPT-Finetune-Julia.sh  3.0-GPT-Finetune-Refactored-CustomDataset.sh  4.0-GPT-ConditionalProb-Inference.sh  4.0-GPT-Surprisal-Inference.sh
data_lib/: __init__.py  icc.py  preprocess_icc_cha.py  speaker_identity_stims.py
data_lib/core/: __init__.py  normalize.py  utils.py
data_lib/data_lib/: __init__.py  normalize.py  process.py  utils.py
gpt_dialogue/: __init__.py  conditional_probs.py  model.py
gpt_dialogue/finetune/: finetune_transformers.py
gpt_dialogue/gpt2/: __init__.py  dm.py  gpt2.py
gpt_dialogue/inference/: inference_transformers.py
gpt_dialogue/monologue_gpt/: __init__.py  dm.py  monologue_gpt.py
gpt_dialogue/pipelines/: __init__.py  conditional_probs.py
gpt_dialogue/scripts/: finetune_transformers.py  finetune_turngpt.py  inference_transformers.py  inference_turngpt.py
gpt_dialogue/turngpt/: __init__.py  dm.py  inference.py  main.py  model.py  tokenizer.py  turngpt.py  vars.py
gpt_dialogue/utils/: visualize_transformer_losses.py
notebooks/: 1.0-MU-DailyDialog-preprocess-POC.ipynb  2.0-MU-GPT-Finetune-POC.ipynb  2.0-MU-GPT-Finetune-TextDataset-POC.ipynb  3.0-MU-GPT-SurprisalInference-POC.ipynb  4.0-MU-GPT-ICC-preprocess-POC.ipynb  5.0-MU-GPT-Finetune-CustomDataset-POC.ipynb  6.0-MU-GPT-Finetune-Visualization-POC.ipynb  7.0-MU-Lena-Stimuli-Preprocess-POC.ipynb  8.0-MU-TurnGPT-Data-Preprocess-POC.ipynb  test.csv
refactor/: .gitignore  progress.txt
scripts/: cleanup.py  decorators.py  finetune.py  inference.py  inference_output.txtls  testing.py
src/: README.md
tests/: configs.toml  debug_conditional_probs.py  test_conditional_prob_pipeline.py  test_data_lib_core.py  test_datasets.py  test_monologue_gpt.py  test_pipelines.py  test_transformers.py  test_turngpt.py  test_turngpt_finetune_dm.py  utils.py
(+98 files in other folders)
