[project]
name = "gpt_dialogue"
version = "0.0.1a"
authors = [
  { name="Muhammad Umair", email="muhammad.umair@tufts.edu" },
]
description = "Source code for the GPT: Monologue to Dialogue project"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mumair01/GPT-Monologue-to-Dialogue"
"Bug Tracker" = "https://github.com/mumair01/GPT-Monologue-to-Dialogue/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gpt_dialogue"]

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
