[project]
name = "gpt_dialogue"
version = "0.0.1a"

description = "Source code for the GPT: Monologue to Dialogue project"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
"Homepage" = "https://github.com/mumair01/GPT-Monologue-to-Dialogue"
"Bug Tracker" = "https://github.com/mumair01/GPT-Monologue-to-Dialogue/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-xdist",
]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default

# pyproject.toml
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
